<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E1F4"
    tools:context=".NotesView">


    <TextView
        android:id="@+id/textUsernameis"
        android:layout_width="338dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="#7D45E0"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewtitle"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="Title"
        android:textColorHint="#8C8C8C"

    android:inputType="textShortMessage|textPersonName"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsernameis" />

    <EditText
        android:id="@+id/textViewNotes"
        android:layout_width="0dp"
        android:layout_height="377dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="top"
        android:hint="Write Here "
        android:textColorHint="#8C8C8C"

    android:inputType="textMultiLine"
        android:paddingLeft="25dp"
        android:paddingRight="20dp"
        android:singleLine="false"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtitle" />

    <Button
        android:id="@+id/btnSave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/btnback1"
        app:layout_constraintStart_toEndOf="@+id/btndelete1"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotes" />

    <Button
        android:id="@+id/btndelete1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@+id/btnSave1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotes" />

    <Button
        android:id="@+id/btnback1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSave1"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotes" />
</androidx.constraintlayout.widget.ConstraintLayout>